# csa-lab3-bilobram

./: README.md  control_unit.py  data_path.py  golden_asm_test.py  input.txt  isa.py  machine.py  microcode.py  pyproject.toml  result.json  translator.py
.github/workflows/: ci.yaml  lint.yaml  tests.yaml
asm_algo/: cat.asm  hello.asm  hello_user_name.asm
asm_programs/: cat.asm  hello.asm  hello_user_name.asm  prob1.asm
golden/: cat_asm.yml  hello_asm.yml  hello_user_asm.yml
resources/: machine.drawio
