[tool.poetry]
name = "csa-lab3-bilobram"
version = "0.1.0"
description = ""
authors = ["notttk <denis.bilobram@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.6"
pytest = "^8.2.1"
pytest-golden = "^0.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
exclude = ["*/__pycache__/*", "*/.git/*", "*/docs/*"]
